--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production builds
-.next/
-out/
-dist/
-build/
-
 # Environment variables
 .env
 .env.local
@@ -17,13 +11,26 @@ build/
 .env.test.local
 .env.production.local
 
-# IDE files
-.vscode/
+# AWS
+.aws/
+aws-exports.js
+
+# CDK
+cdk.out/
+cdk.context.json
+
+# Build outputs
+dist/
+build/
+*.tsbuildinfo
+
+# IDE
+.vscode/settings.json
 .idea/
 *.swp
 *.swo
 
-# OS files
+# OS
 .DS_Store
 Thumbs.db
 
@@ -37,16 +44,9 @@ pids/
 *.seed
 *.pid.lock
 
-# AWS CDK
-cdk.out/
-*.d.ts
-
-# Temporary files
-*.tmp
-*.temp
-
 # Coverage directory used by tools like istanbul
 coverage/
+*.lcov
 
 # Dependency directories
 jspm_packages/
@@ -54,41 +54,13 @@ jspm_packages/
 # Optional npm cache directory
 .npm
 
-# Optional REPL history
-.node_repl_history
+# Optional eslint cache
+.eslintcache
 
-# Output of 'npm pack'
-*.tgz
+# Razorpay keys and secrets
+razorpay-*.json
+*-credentials.json
 
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# Verification reports
-*-verification-*.txt
-*-check-*.txt
-
-# Kiro files (keep specs but ignore temp files)
-.kiro/temp/
-.kiro/cache/
+# Temporary files
+tmp/
+temp/
